# For_Slingshot

./: .gitignore  code.d2
agent-hill-climb-supervised/: .gitignore  README.md  requirements.txt
agent-hill-climb-supervised/scripts/: cleanerfilter.py  datacapture.py  loadandsave.py  run.py  splitandtrain.py
diagrams/: complete_flow_overview.d2  layer1_infrastructure.d2  layer2_data_ops.d2  layer3_rag_engine.d2  layer4_agent_swarm.d2  layer5_runtime.d2
frontend/: .gitignore  index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
phase1_2/: .gitignore  AGENTS.md  README.md  config.json  phase1_2.sh  progress.txt  pyproject.toml  setup.sh
phase1_2/.agents/skills/label/: SKILL.md
phase1_2/.agents/skills/label/scripts/: auto_label_and_show.py  dispatch.sh  merge_classes.py  run_batch.py
phase1_2/.agents/skills/phase1_2/: SKILL.md
phase1_2/api/: __init__.py  main.py
phase1_2/docs/: api_fastapi.md  api_interactions.md  architecture.md  changelog.md  models.md  skills.md  usage.md
phase1_2/pipeline/: main.py
phase1_2/shared/: config.py  utils.py
tests/: test_api_endpoints.py
yolodex/: AGENTS.md  README.md  pyproject.toml  setup.sh
yolodex/.agents/skills/eval/scripts/: run.py
yolodex/.agents/skills/label/scripts/: dispatch.sh  run.py
yolodex/.agents/skills/yolodex/: SKILL.md
yolodex/api/: __init__.py  main.py
yolodex/docs/: api_fastapi.md  api_interactions.md  architecture.md  usage.md
yolodex/pipeline/: main.py  requirements.txt
yolodex/shared/: config.py  toon_integration.py  utils.py
(+1 files in other folders)
