[project]
name = "yolodex"
version = "0.1.0"
description = "Autonomous YOLO training data generation from gameplay videos"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.0",
    "openai>=1.0.0",
    "google-generativeai>=0.5.0",
    "yt-dlp>=2024.1.0",
    "ultralytics>=8.0.0",
    "Pillow>=10.0.0",
    "numpy>=1.24.0",
    "uvicorn>=0.35.0",
]

[tool.hatch.build.targets.wheel]
packages = ["shared", "pipeline", "api"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
